Tweak min-height to try and fix 'jumping' on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,3 @@
 #step-display {
-  min-height: 180px;
+  min-height: 200px;
 }
